// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/permissions_gates SystemPermissionGate should match snapshot when user have at least on of the permissions 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(SystemPermissionGate)
    permissions={
      Array [
        "test_system_permission",
        "not_existing_permission",
      ]
    }
  >
    <SystemPermissionGate
      dispatch={[Function]}
      hasPermission={true}
      invert={false}
      permissions={
        Array [
          "test_system_permission",
          "not_existing_permission",
        ]
      }
    >
      <p>
        Valid permission (shown)
      </p>
    </SystemPermissionGate>
  </Connect(SystemPermissionGate)>
</Provider>
`;

exports[`components/permissions_gates SystemPermissionGate should match snapshot when user have permission 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(SystemPermissionGate)
    permissions={
      Array [
        "test_system_permission",
      ]
    }
  >
    <SystemPermissionGate
      dispatch={[Function]}
      hasPermission={true}
      invert={false}
      permissions={
        Array [
          "test_system_permission",
        ]
      }
    >
      <p>
        Valid permission (shown)
      </p>
    </SystemPermissionGate>
  </Connect(SystemPermissionGate)>
</Provider>
`;

exports[`components/permissions_gates SystemPermissionGate should match snapshot when user have permission and use invert 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(SystemPermissionGate)
    invert={true}
    permissions={
      Array [
        "test_system_permission",
      ]
    }
  >
    <SystemPermissionGate
      dispatch={[Function]}
      hasPermission={true}
      invert={true}
      permissions={
        Array [
          "test_system_permission",
        ]
      }
    />
  </Connect(SystemPermissionGate)>
</Provider>
`;

exports[`components/permissions_gates SystemPermissionGate should match snapshot when user haven't permission 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(SystemPermissionGate)
    permissions={
      Array [
        "invalid_permission",
      ]
    }
  >
    <SystemPermissionGate
      dispatch={[Function]}
      hasPermission={false}
      invert={false}
      permissions={
        Array [
          "invalid_permission",
        ]
      }
    />
  </Connect(SystemPermissionGate)>
</Provider>
`;

exports[`components/permissions_gates SystemPermissionGate should match snapshot when user not have permission and use invert 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(SystemPermissionGate)
    invert={true}
    permissions={
      Array [
        "invalid_permission",
      ]
    }
  >
    <SystemPermissionGate
      dispatch={[Function]}
      hasPermission={false}
      invert={true}
      permissions={
        Array [
          "invalid_permission",
        ]
      }
    >
      <p>
        Invalid permission but inverted (shown)
      </p>
    </SystemPermissionGate>
  </Connect(SystemPermissionGate)>
</Provider>
`;
